# vue-actix-blog

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  articles.db
articles/: Digitization of Meillassoux thesis.md  Historical emergence of duality.md  Technojhanas.md  The jhanas of Farīd ud-Dīn.md  about.md  contact.md  digital garden.md  home.md
frontend/: articles.db  eslint.config.js  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/assets/: base.css  main.css  prism.css
frontend/src/assets/fonts/: README.md
frontend/src/components/: HelloWorld.vue  LuaCodeBlock.vue  LuaComputer.vue  NavBar.vue
frontend/src/views/: About.vue  Article.vue  Lua.vue  Timeline.vue
src/: api.rs  db.rs  lua.rs  main.rs  test.rs
