[package]
name = "vue-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3.17"
mlua = { version = "0.10.5", features = ["lua54"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
